2009-11-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#148146 First tap on task switcher not recognised when new
		  IM/email arrives

	When the display is off we hide HdRenderManager which caused
	hd_render_manager_actor_is_visible() to return FALSE for
	everything, including the HdTitleBar buttons when we did
	hd_render_manager_set_input_viewport().

	* src/home/hd-render-manager.c (hd_render_manager_actor_is_visible):
	  Ignore the visibility of HdRenderManager and don't lie about the
	  supposed-to-be visibility of @actor.

2009-11-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Improve the ctrl+shift+n compositing toggling shortcut.

	* src/mb/hd-comp-mgr.[ch] (hd_comp_mgr_unredirect_topmost_client): Add
	an argument to redirect non-fullscreen applications.
	* src/main.c (key_binding_func): Explicitly unredirect non-fullscreen
	applications. Do not change mode unless we are in some application mode.
	Support portrait modes also.

2009-11-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#142364 Desktop stays in portrait mode

	A situation it could happen was when there was an arbitrary window,
	then another one was mapped beneath forcing portrait mode (REQUEST=2).
	The premise of foricing is that "i'll be visible, don't worry",
	but anyway.  If it's broken we finish rotation we started optimistically
	but we stay in APP or HOME state, and don't even think about switching
	back.  Now reched when the forceful client is eventually map_notify()ed.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_portrait_or_not_portrait):
	  Undo hd_comp_mgr_portrait_forecast() if it turns out to have
	  been false.

2009-11-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#131591 - progress bar of backup application is shown on the
	desktop in a mentioned scenario.

	* src/main.c (key_binding_func): Check for system modals before
	obeying the ctrl+backspace key shortcut.

	Fixes: NB#139872 - X-term by magic shortcut Ctrl+Shift+x leaves
	non-killable Zombie
